version 0.8 - xxx
 . Actions: Added BezierBy action (issue #313)
 . Actions: Sequence works when 1st action (issue #348)
 . All: removed deprecated classes/methods (issue #326)
 . AtlasSprite: supports flipX and flipY properties (issue #343)
 . BitmapFontAtlas: new features (issue #317)
 . CocosLive: Demo shows world rankings (issue #342)
 . CocosNode: actions don't retain the target (issue #150)
 . Demos: Added PerformanceParticleTest (issue #331)
 . Director: Fast Director runs in it's own thread (issue #145)
 . Director: Fast Director works with attach/detach (issue #145)
 . Director: Fast Director works with auto-lock (issue #239)
 . LabelAtlas: don't render in subpixel (issue #135)
 . Particles: Added QuadParticleSystem. renamed ParticleSystem to PointParticleSystem (issue #245)
 . Particles: added support for endSize and endSizeVar (issue #241)
 . Particles: added support for start/end/var spinning (issue #335)
 . Particles: support for World/Local coordinates (issue #241)
 . Texture2D: new alias/antialias API (issue #226)
 . Touches: new feature (issue #211)

version 0.7.2 - 23-Apr-2009
 . All: removed chipmunk macros. using CG macros (issue #290)
 . Actions: Added TintTo and TintBy (issue #204)
 . AtlasSprite: don't overwrite index 0 (issue #283)
 . AtlasSprite: Supports Z-order (issue #275)
 . AtlasSprite & Sprite: don't auto center sprite when setting frame (issue #281)
 . AtlasSprite: don't render in subpixels (issue #135)
 . AtlasSpriteManager: supports transformations (issue #308)
 . AtlasSpriteManager: fixes in removeChild (issue #296)
 . AtlasSpriteManager: works with capacity=1 (issue #305)
 . CocosNode: CocosNodeExtras merged into CocosNode (issue #292)
 . CocosNode: improved runAction/stopAction (issue #300)
 . CocosNode: possible memory leak when running actions (issue #298)
 . CocosNode: dont execute an already running action (issue #299)
 . CocosNode: children referring to deallocated parent (issue #297)